--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+{% extends 'base.html' %}
+{% block content %}
 
 <div class="container my-3">
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
@@ -32,3 +33,5 @@
         <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
+
+{% endblock %}
