--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+{% extends 'base.html' %}
+{% block content %}
 
 <div class="container my-3">
     <table class="table">
@@ -28,3 +29,5 @@
         </tbody>
     </table>
 </div>
+
+{% endblock %}
