--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -12,7 +12,7 @@
         </thead>
         <tbody>
         {% if question_list %}
-        {% for question in question_list %}
+        {% for question in question_list.items %}
         <tr>
             <td>{{ loop.index }}</td>
             <td>
@@ -23,11 +23,52 @@
         {% endfor %}
         {% else %}
         <tr>
-            <td colspan="3">질문이 없습니다.</td>
+            <td colspan="3">No questions.</td>
         </tr>
         {% endif %}
         </tbody>
     </table>
-    <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
+
+    <ul class="pagination justify-content-center">
+        <!-- Previous Page -->
+        {% if question_list.has_prev %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ question_list.prev_num }}">Previous</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">Previous</a>
+        </li>
+        {% endif %}
+        {% for page_num in question_list.iter_pages() %}
+            {% if page_num %}
+                {% if page_num != question_list.page %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                </li>
+                {% else %}
+                <li class="page-item active" aria-current="page">
+                    <a class="page-link" href="#">{{ page_num }}</a>
+                </li>
+                {% endif %}
+           {% else %}
+                <li class="disabled">
+                    <a class="page-link" href="#">...</a>
+                </li>
+           {% endif %}
+        {% endfor %}
+
+        <!-- Next Page -->
+        {% if question_list.has_next %}
+        <li class="page-item">
+            <a class="page-link" href="?page={{ question_list.next_num }}">Next</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <a class="page-link" tabindex="-1" aria-disabled="true" href="#">Next</a>
+        </li>
+        {% endif %}
+    </ul>
+    <a href="{{ url_for('question.create') }}" class="btn btn-primary">Write</a>
 </div>
 {% endblock %}
