--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -37,9 +37,10 @@
         <!-- End Error Display -->
 
         <div class="form-group">
-            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+            <textarea {% if not g.user %}disabled{% endif %}
+                    name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
-        <input type="submit" value="답변등록" class="btn btn-primary">
+        <input {% if not g.user %}disabled{% endif %} type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
 
