--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -7,11 +7,26 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
+                {% if question.modify_date %}
+                <div class="badge badge-light p-2 text-left mx-3">
+                    <div class="mb-2">Modified at</div>
+                    <div>{{ question.modify_date|datetime }}</div>
+                </div>
+                {% endif %}
                 <div class="badge badge-light p-2 text-left">
                     <div class="mb-2">{{ question.user.username }}</div>
                     <div>{{ question.create_date|datetime }}</div>
                 </div>        
             </div>
+            {% if g.user == question.user %}
+            <div class="my-3">
+                <a href="{{ url_for('question.modify', question_id=question.id) }}"
+                class="btn btn-sm btn-outline-secondary">Edit</a>
+                <a href="{{ url_for('question.delete', question_id=question.id) }}" 
+                class="delete btn btn-sm btn-outline-secondary"
+                data-uri="{{ url_for('question.delete', question_id=question.id) }}">Delete</a>
+            </div>
+            {% endif %}    
         </div>
     </div>
     <h5 class="border-bottom my-3 py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
@@ -23,8 +38,23 @@
                 <div class="badge badge-light p-2 text-left">
                     <div class="mb-2">{{ question.user.username }}</div>
                     <div>{{ question.create_date|datetime }}</div>
-                </div>        
+                </div>
+                {% if answer.modify_date %}
+                <div class="badge badge-light p-2 text-left">
+                    <div class="mb-2">Modified at</div>
+                    <div>{{ answer.modify_date|datetime }}</div>
+                </div>
+                {% endif %}
             </div>
+            {% if g.user == answer.user %}
+            <div class="my-3">
+                <a href="{{ url_for('answer.modify', answer_id=answer.id) }}"
+                    class="btn btn-sm btn-outline-secondary">Edit</a>
+                <a href="#" class="delete btn btn-sm btn-outline-secondary "
+                    data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">Delete</a>
+    
+            </div>
+            {% endif %}    
         </div>
     </div>
     {% endfor %}
@@ -42,8 +72,19 @@
             <textarea {% if not g.user %}disabled{% endif %}
                     name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
-        <input {% if not g.user %}disabled{% endif %} type="submit" value="답변등록" class="btn btn-primary">
+        <input {% if not g.user %}disabled{% endif %} type="submit" value="Post Reply" class="btn btn-primary">
     </form>
 </div>
 
+<script type='text/javascript'>
+    $(document).ready(function(){
+        $(".delete").on('click', function() {
+            if (confirm("Are you sure?")) {
+                location.href = $(this).data('uri');
+            } else {
+                return false;
+            }
+        });
+    });
+</script>    
 {% endblock %}
