--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -11,7 +11,7 @@
 
     <!-- pybo CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Hello, pybo!</title>
+    <title>Welcome to Python Board</title>
 </head>
 
 <body>
