--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -46,6 +46,7 @@
                     {% if question.comment_set|length > 0 %}
                     <div class="mt-3">
                     {% for comment in question.comment_set %}
+                        <a name="comment_{{ comment.id }}"></a>
                         <div class="comment py-2 text-muted">
                             <span style="white-space: pre-line;">{{ comment.content }}</span>
                             <span>
@@ -73,6 +74,7 @@
     </div>
     <h5 class="border-bottom my-3 py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
     {% for answer in question.answer_set %}
+    <a name="answer_{{ answer.id }}"></a>
     <div class="row my-3">
         <div class="col-1">  <!-- 추천영역 -->
             <div class="bg-light text-center p-3 border font-weight-bolder mb-1">{{ answer.voter|length }}</div>
@@ -109,6 +111,7 @@
                     {% if answer.comment_set|length > 0 %}
                     <div class="mt-3">
                     {% for comment in answer.comment_set %}
+                        <a name="comment_{{ comment.id }}"></a>
                         <div class="comment py-2 text-muted">
                             <span style="white-space: pre-line;">{{ comment.content }}</span>
                             <span>
@@ -128,7 +131,7 @@
                     {% endif %}
                     <div>
                         <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}"
-                        class="small"><small>Comment</small></a>
+                        class="small"><small>Leave a Comment</small></a>
                     </div>
                 </div>
             </div>
@@ -165,8 +168,10 @@
         });
 
         $(".recommend").on('click', function() {
-            if(confirm("정말로 추천하시겠습니까?")) {
+            if (confirm("Are you sure?")) {
                 location.href = $(this).data('uri');
+            } else {
+                return false;
             }
         });
     });
